# snap-manila-data

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build-snap.yml  main.yml  pr.yaml  test.yml  tics.yml
manila_data/: configuration.py  context.py  error.py  log.py  manila_data.py  services.py  template.py
manila_data/scripts/: snap_helpers.py
manila_data/templates/: manila.conf.j2  rootwrap.conf.j2
snap/: snapcraft.yaml
tests/: __init__.py
tests/unit/: __init__.py  test_manila_data.py  test_services.py
