[project]
name = "manila-data"
version = "0.1.0"
description = "OpenStack Manila Data Service Snap"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["manila_data", "manila_data.scripts"]

[tool.setuptools.package-data]
manila_data = ["templates/*.j2"]

[project.scripts]
manila-data-snap-helpers = "manila_data.scripts.snap_helpers:script"

[project.entry-points."snaphelpers.hooks"]
install = "manila_data.manila_data:GenericManilaData.install_hook"
configure = "manila_data.manila_data:GenericManilaData.configure_hook"
