[project]
name = "manila-data"
version = "0.1.0"
description = "OpenStack Manila Data Service Snap"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "snap-helpers @ git+https://github.com/albertodonato/snap-helpers@46803aa9d52cc0bb24f76df878dd1010fc08e6a0",
  "jinja2",
  "pydantic",
]

[project.optional-dependencies]
dev = [
  "stestr",
  "black",
  "isort",
  "flake8",
  "flake8-docstrings",
  "flake8-copyright",
  "flake8-builtins",
  "pyproject-flake8",
  "pep8-naming",
  "codespell",
  "mypy",
  "coverage",
]
tics = ["pylint", "flake8"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["manila_data", "manila_data.scripts"]

[tool.setuptools.package-data]
manila_data = ["templates/*.j2"]

[project.scripts]
manila-data-snap-helpers = "manila_data.scripts.snap_helpers:script"

[project.entry-points."snaphelpers.hooks"]
install = "manila_data.manila_data:GenericManilaData.install_hook"
configure = "manila_data.manila_data:GenericManilaData.configure_hook"

[tool.flake8]
extend-ignore=["E226", "W504"]

[tool.coverage.run]
branch = true
parallel = true
source = ["manila_data"]
omit = [
    ".tox/*",
    "tests/*",
    "manila_data/templates/*",
]
